--- a/YoloLibrary.WebAPI/Properties/launchSettings.json
+++ b/YoloLibrary.WebAPI/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
+        "ASPNETCORE_ENVIRONMENT": "Staging"
       }
     }
   }
