--- a/YoloLibrary/YoloLibrary.csproj
+++ b/YoloLibrary/YoloLibrary.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.ML.OnnxRuntime" Version="1.15.0" />
+      <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.15.0" />
       <PackageReference Include="OpenCvSharp4" Version="4.7.0.20230115" />
       <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.7.0.20230115" />
     </ItemGroup>
